--- a/style.css
+++ b/style.css
@@ -1,18 +1,86 @@
-[class*="container"] {
-    min-height:100px;
-    background-color:cadetblue;
-    border: 1px solid black;
-}
 
-[class*="col"] {
-    min-height: 25px;
-    border: 1px solid red;
-}
-
-.green{
-    background-color: #1ABC9C;
-}
 
 .footer{
     min-height: 100px;
+}
+
+ul li{
+    list-style: none;
+    /* padding: 0 1rem; */
+}
+ul li a{
+    padding: 0 1rem;
+    text-decoration: none;
+    color: inherit;
+}
+
+/* .box .box-img{
+    width: 100px;
+    height: 100px;
+} */
+
+img{
+   /* height: 100%; */
+   width: 100%;
+   object-fit: cover;
+}
+
+/* [class*="col"],
+#jumbotron>.box {
+	min-height: 80px;
+	border: 2px dashed aqua;
+}
+
+.box.box-img {
+	height: 300px;
+	width: 300px;
+}
+
+.box.box-icon {
+	height: 10px;
+	width: 500px;
+}
+
+
+[class*="col"]>.box {
+	min-height: 80px;
+	border: none;
+} */
+
+/* FINE CLASSI DI DEBUG DA RIMUOVERE */
+
+.navbar-dark {
+	background-color: #2c3e50 !important;
+}
+
+#jumbotron,
+#about{
+    background-color: #1ABC9C;
+    color: white;
+}
+
+
+input{
+    border: none;
+    border-bottom: 1px solid lightgray;
+}
+
+.upper-footer{
+    background-color: #3A546D;
+    color: #fff;
+}
+
+.bottom-footer{
+    background-color: #2C3E50;
+    color: #fff;
+}
+
+/* .star-bars{
+    width: 50px ;
+    padding:1px ;
+    background-color: black;
+} */
+
+label{
+    display: block;
 }
